// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SalaireTempsPlein /> should render 1`] = `
<div>
  <h2>
    Derniers mois de salaire
  </h2>
  <table
    style="font-size: 1.2em;"
    width="100%"
  >
    <thead>
      <tr>
        <td
          style="text-align: center; font-weight: bold;"
          width="140"
        >
          Mois
        </td>
        <td
          style="text-align: center; font-weight: bold;"
          width="200"
        >
          Salaire brut mensuel
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        style="background: rgb(221, 221, 221);"
      >
        <td>
          Dernier salaire
        </td>
        <td
          style="text-align: center;"
        >
          <input
            class="sc-bdVaJa dFlwiT"
            size="6"
            type="number"
            value="1500"
          />
        </td>
        <td
          rowspan="3"
          style="text-align: center; background: rgb(221, 221, 221);"
          valign="middle"
        >
          trois derniers
          <br />
          mois de salaire
        </td>
      </tr>
      <tr
        style="background: rgb(221, 221, 221);"
      >
        <td>
          Salaire m-1
        </td>
        <td
          style="text-align: center;"
        >
          <input
            class="sc-bdVaJa dFlwiT"
            size="6"
            type="number"
            value="1500"
          />
        </td>
      </tr>
      <tr
        style="background: rgb(221, 221, 221);"
      >
        <td>
          Salaire m-2
        </td>
        <td
          style="text-align: center;"
        >
          <input
            class="sc-bdVaJa dFlwiT"
            size="6"
            type="number"
            value="1500"
          />
        </td>
      </tr>
      <tr>
        <td>
          Salaire m-3
        </td>
        <td
          style="text-align: center;"
        >
          <input
            class="sc-bdVaJa dFlwiT"
            size="6"
            type="number"
            value="1500"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<SalaireTempsPlein /> should update all monthes 1`] = `
<div>
  <h2>
    Derniers mois de salaire
  </h2>
  <table
    style="font-size: 1.2em;"
    width="100%"
  >
    <thead>
      <tr>
        <td
          style="text-align: center; font-weight: bold;"
          width="140"
        >
          Mois
        </td>
        <td
          style="text-align: center; font-weight: bold;"
          width="200"
        >
          Salaire brut mensuel
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        style="background: rgb(221, 221, 221);"
      >
        <td>
          Dernier salaire
        </td>
        <td
          style="text-align: center;"
        >
          <input
            class="sc-bdVaJa dFlwiT"
            size="6"
            type="number"
            value="2000"
          />
        </td>
        <td
          rowspan="3"
          style="text-align: center; background: rgb(221, 221, 221);"
          valign="middle"
        >
          trois derniers
          <br />
          mois de salaire
        </td>
      </tr>
      <tr
        style="background: rgb(221, 221, 221);"
      >
        <td>
          Salaire m-1
        </td>
        <td
          style="text-align: center;"
        >
          <input
            class="sc-bdVaJa dFlwiT"
            size="6"
            type="number"
            value="2000"
          />
        </td>
      </tr>
      <tr
        style="background: rgb(221, 221, 221);"
      >
        <td>
          Salaire m-2
        </td>
        <td
          style="text-align: center;"
        >
          <input
            class="sc-bdVaJa dFlwiT"
            size="6"
            type="number"
            value="2000"
          />
        </td>
      </tr>
      <tr>
        <td>
          Salaire m-3
        </td>
        <td
          style="text-align: center;"
        >
          <input
            class="sc-bdVaJa dFlwiT"
            size="6"
            type="number"
            value="2000"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
